 
[v1.1.2p12d]
 ! API: The protected methods in CPanelPopup have an additional parameter, that tells them for which Dockable the popup-dialog is shown.
 - Bugfix: A CPanelPopup will now wait with opening its popup-dialog until the focus has been transfered to the Dockable for which the dialog is shown. Otherwise the dialog would receive the focus, and then the focus would be stolen by the Dockable, and that event would close the popup.
 
[v1.1.2p12e]
 - Bugfix: the DefaultDockRelator adds now a global MouseListener to make sure it does never miss a mouse-released event (on some systems the mouse-released events are not sent to the same Components as the mouse-pressed events)
 - API: added the property-key DefaultDockRelator.AUTO_DROP_ON_ANY_MOUSE_RELEASED_EVENT with which clients may disable the global-mouselistener of the DefaultDockRelator
 
[v1.1.2p13]
 - Bugfix: DefaultStackDockComponent will consume mouse-pressed MouseEvents that are triggered on its tabs. This means that MouseEvents no longer fall through the tab, making the framework believe the user wants to drag the StackDockStation when in fact the user wants to drag a child of the StackDockStation.
 - Bugfix: DefaultDockRelocator remembers the last active MouseListener and calls its "mouse released" event whenever a MouseEvent from another listener is detected. The last active MouseListener is now unset whenever an drag-operation is modified by an outside force not known to the DefaultDockRelocator, as for example by the MouseListener that is created by the DefaultStackDockComponent. This prevents cancellation of drag operations that were not initiated by the DefaultDockRelocator.
 
[v1.1.2p14]
 - API: DockStation got a new method called "getPlaceholderMapping" with which clients can access the placeholders that are stored on the station.